Fix Spacing of Storylet Text Div

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -84,6 +84,7 @@ a.choice {
 #storylet-text {
   .inner-frame();
   .prose-text();
+  margin-bottom: @spacing;
 }
 
 .dash-banner {
